# zkvm-perf

./: Dockerfile  eval.sh
eval/: Cargo.toml
eval/src/: sp1.rs  types.rs  utils.rs
fixtures/zktls/: verifying_k256.key
fixtures/zktls/data/: bench1024.json  bench16.json  bench2048.json  bench256.json  full_http_responses.json  partial_http_responses.json
fixtures/zktls/keys/: signing_k256.key
programs/zktls-att-verification-sp1/: Cargo.toml  README.md
programs/zktls-att-verification-sp1/src/: aes_utils.rs  ciphertext_verification.rs  ecdsa_utils.rs  main.rs  signature_verification.rs  verification_data.rs
programs/zktls-sp1/: Cargo.toml
programs/zktls-sp1/src/: main.rs
