[workspace]
[package]
name = "zktls-att-verification"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
zktls-att-verification = { git = "https://github.com/primus-labs/zktls-att-verification.git", branch = "main" }

sp1-zkvm = "4.0.0-rc.10"

[features]
risc0 = []
sp1 = []
